# demo_w7/flask-server/openapi_server/models/__init__.py
@@ -1,9 +1,6 @@
 # flake8: noqa
 # import models into model package
-from openapi_server.models.category import Category
-from openapi_server.models.category_create import CategoryCreate
 from openapi_server.models.error import Error
-from openapi_server.models.list_categories200_response import ListCategories200Response
 from openapi_server.models.product import Product
 from openapi_server.models.product_create import ProductCreate
 from openapi_server.models.product_list_response import ProductListResponse
